@@ -1,0 +1,1 @@
+@import 'wagtailadmin/scss/utilities/text';
